# XAI-small_object_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  xai_evidence_new_repo_implementation_guide.md
configs/: default_new_repo_config.yaml  yolov8s-p2.yaml
docs/: 00_research_manifest.md  00_research_positioning.md  01_problem_definition.md  01_problem_statement.md  02_research_gap_and_hypotheses.md  02_research_question_hypothesis.md  03_methodology.md  03_small_object_detection_failure_modes.md  04_experimental_protocol.md  04_xai_methods_for_detection.md  05_evidence_guided_training_design.md  05_metrics_and_ablation.md  06_experiment_protocol.md  06_implementation_roadmap.md  XAI_methods_full_overview.md  baseline_phase3_report.md  experiment_log.md  m8_note.md  m8_v1b_1_policy_alignment_patch.md  m8_v1c_automated_policy_mining.md  m8_v1c_training_entrypoint.md  phase11e_1_real_approval_validator_logic_patch.md  phase11f_1_kaggle_execution_adapter_package.md  phase11f_approved_staging_training_execution_package.md  phase11g_0_kaggle_staging_input_preflight_package.md  phase11h_kaggle_manual_preflight_validation.md  phase11i_human_training_execution_approval_gate.md  phase11j0_approved_kaggle_training_command_lock.md  phase11j1_locked_kaggle_training_execution.md  phase11k_training_outputs_and_metrics.md  phase11l_training_output_integrity_and_provenance.md  phase11m0_prepare_approved_test_evaluation_no_execution.md  phase11m1_approved_test_evaluation_execution.md  phase11n_test_evaluation_output_collection_and_validation.md  phase3_5_dataset_sanity.md  (+10 more)
(+201 files in other folders)
