[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-evidence-small-object-detection"
version = "0.1.0"
description = "Research repository for XAI-guided evidence preservation in small object detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "opencv-python>=4.10",
    "Pillow>=10.0",
    "tqdm>=4.66",
    "torch>=2.3",
    "torchvision>=0.18",
    "ultralytics>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
